[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://world/WorldMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/camera/CameraHolder.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/Map.gd" type="Script" id=5]
[ext_resource path="res://actors/animals/BaseAnimal.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/animals/hare/Hare.tscn" type="PackedScene" id=7]
[ext_resource path="res://weapons/rack/WeaponRack.tscn" type="PackedScene" id=8]
[ext_resource path="res://world/interactables/Altar.tscn" type="PackedScene" id=9]
[ext_resource path="res://world/trees/Tree.tscn" type="PackedScene" id=10]
[ext_resource path="res://world/WorldMapNavMesh.tscn" type="PackedScene" id=11]
[ext_resource path="res://actors/npcs/quest-giver/QuestGiver.tscn" type="PackedScene" id=12]

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldMap" parent="." instance=ExtResource( 2 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -3, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="CameraHolder" parent="Player" instance=ExtResource( 4 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.819152, 0.469846, -0.32899, 0.573576, -0.67101, 0.469846, 0, -0.573576, -0.819152, -0.369623, 25.041, -0.328 )
light_color = Color( 0.964706, 1, 0.368627, 1 )
light_energy = 0.5
shadow_enabled = true

[node name="Map" type="Navigation" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )
script = ExtResource( 5 )

[node name="Animals" type="Node" parent="Map"]

[node name="BaseAnimal" parent="Map/Animals" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 4.0252, 39 )

[node name="Hare" parent="Map/Animals" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 6, 0 )
move_speed = 2.5

[node name="WeaponRack" parent="Map" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, 12 )

[node name="Altar" parent="Map" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 4.02803, 10 )

[node name="Tree" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -10, 4, 17 )

[node name="Tree3" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 21, 4, 39 )

[node name="Tree4" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1, 4, 35 )

[node name="Tree5" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 20, 4, 14 )

[node name="Tree6" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 15, 4, 30 )

[node name="Tree7" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 7, 4, 18 )

[node name="Tree2" parent="Map" instance=ExtResource( 10 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -17, 4, 6 )

[node name="NavigationMeshInstance" parent="Map" instance=ExtResource( 11 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )

[node name="QuestGiver" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 1, 11 )
peaceful_animals = null

[connection signal="quest_finished" from="." to="QuestGiver" method="_on_Game_quest_finished"]
[connection signal="offering_offered" from="Map/Altar" to="." method="_on_Altar_offering_offered"]
[connection signal="quest_started" from="QuestGiver" to="." method="_on_QuestGiver_quest_started"]
